Fixes broken link

--- a/guirlandas.html
+++ b/guirlandas.html
@@ -95,7 +95,7 @@
 									<h2>Como cuidar</h2>
 									<p>Brand & Co.</p>
 									<h2>Saiu de época?</h2>
-									<p>Não achamos que guirlandas saem jamais de época! Mas, se você, como a maioria das pessoas, comprou pro Natal e não quer manter o formato de guirlanda depois, nós também <a href="reforma.html">reformamos arranjos</a> - suas suculentas voltam como antes, mas agora num potinho pra ficarem bonitinhas na sua mesa, estante ou até em outra parede!</p>
+									<p>Não achamos que guirlandas saem jamais de época! Mas, se você, como a maioria das pessoas, comprou pro Natal e não quer manter o formato de guirlanda depois, nós também <a href="reformas.html">reformamos arranjos</a> - suas suculentas voltam como antes, mas agora num potinho pra ficarem bonitinhas na sua mesa, estante ou até em outra parede!</p>
 									<h2>Compartilhe com seus amigos!</h2>
 									<ul class="social-icons">
 										<li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
