Adiciona descrições de guirlanda

--- a/guirlandas.html
+++ b/guirlandas.html
@@ -87,13 +87,21 @@
 							<div class="col-md-5">
 								<div class="project-content">
 									<h2>Detalhes</h2>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
-									<p>Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.</p>
+									<p>Guirlanda feita de suculentas naturais, vivas, plantadas em substrato e esfagno. Cada guirlanda é feita com tipos de suculentas diferentes, nenhuma guirlanda é igual à outra.</p>
+									<p>A <u>guirlanda completa</u> é feita completamente com base no substrato, e possui diversos tipos de enfeites em todo o seu entorno. Possui por volta de 30cm de diâmetro interno, com 5cm de contorno plantável.</p>
+									<p><em>Faixa de valor:</em> R$150,00 - R$180,00</p>
+									<p>A <u>guirlanda média</u> é feita com o substrato aplicado em apenas uma parte de uma guirlanda de cipó. Possui por volta de 30cm de diâmetro.</p>
+									<p><em>Faixa de valor:</em> R$90,00 - R$110,00</p>
+									<p>A <u>guirlanda pequena</u> é feita com substrato aplicado em apenas uma parte de uma guirlanda de cipó. Possui por volta de 20cm de diâmetro.</p>
+									<p><em>Faixa de valor:</em> R$60,00 - R$80,00</p>
 									<h2>Duração do arranjo</h2>
 									<p>Por volta de <strong>3 meses.</strong></p>
 									<p>O arranjo continua vivo depois disso se você cuidar direitinho! Mas pode perder a forma, já que as plantas crescem, assim como pode ser necessário renovar o substrato ou adubar o arranjo depois de 3 meses.</p>
 									<h2>Como cuidar</h2>
-									<p>Brand & Co.</p>
+									<p>As suculentas da guirlanda estão em uma base de esfagno - ou seja, ela segura água. Além disso, essas suculentas podem ou não ter raízes. Não se preocupe! As suculentas enraízam facilmente, e elas estão plantadas no arranjo usando técnicas comuns de arranjos com suculentas.</p>
+									<p>Atrás da guirlanda, ela não possui nenhum enfeite, então é o local ideal para descobrir se você precisa aguar sua guirlanda. Apenas coloque um dedo na parte inferior da guirlanda (onde estão as suculentas) e então, se o substrato estiver seco, você já deve molhar novamente.</p>
+									<p>Recomendamos por volta de 2hrs de sol na sua guirlanda - suculentas são plantas de sol forte, mas, por algumas poderem estar sem raízes, não recomendamos o sol da tarde ou 6 a 8hrs de sol logo no início. Ao longo do tempo, se você quiser mudar sua suculenta de lugar, ela pode ser rustificada para locais com sol mais intenso. Recomendamos, porém, pelo menos 15 dias de até 2hrs de sol, preferencialmente da manhã, para que ela possa começar a enraizar e ter melhor capacidade de absorver água - assim, ela pode aguentar um sol mais forte sem maiores problemas.</p>
+									<p>Se estiver ainda com dúvidas, <a href="contato.html">pode perguntar pra gente!</a></p>
 									<h2>Saiu de época?</h2>
 									<p>Não achamos que guirlandas saem jamais de época! Mas, se você, como a maioria das pessoas, comprou pro Natal e não quer manter o formato de guirlanda depois, nós também <a href="reformas.html">reformamos arranjos</a> - suas suculentas voltam como antes, mas agora num potinho pra ficarem bonitinhas na sua mesa, estante ou até em outra parede!</p>
 									<h2>Compartilhe com seus amigos!</h2>
