--- a/guirlandas.html
+++ b/guirlandas.html
@@ -88,12 +88,12 @@
 								<div class="project-content">
 									<h2>Detalhes</h2>
 									<p>Guirlanda feita de suculentas naturais, vivas, plantadas em substrato e esfagno. Cada guirlanda é feita com tipos de suculentas diferentes, nenhuma guirlanda é igual à outra.</p>
-									<p>A <u>guirlanda completa</u> é feita completamente com base no substrato, e possui diversos tipos de enfeites em todo o seu entorno. Possui por volta de 30cm de diâmetro interno, com 5cm de contorno plantável.</p>
-									<p><em>Faixa de valor:</em> R$150,00 - R$180,00</p>
-									<p>A <u>guirlanda média</u> é feita com o substrato aplicado em apenas uma parte de uma guirlanda de cipó. Possui por volta de 30cm de diâmetro.</p>
-									<p><em>Faixa de valor:</em> R$90,00 - R$110,00</p>
-									<p>A <u>guirlanda pequena</u> é feita com substrato aplicado em apenas uma parte de uma guirlanda de cipó. Possui por volta de 20cm de diâmetro.</p>
-									<p><em>Faixa de valor:</em> R$60,00 - R$80,00</p>
+									<p>A <u>guirlanda completa</u> é feita completamente com base no substrato, e possui diversos tipos de enfeites em todo o seu entorno. Possui por volta de 30cm de diâmetro interno, com 5cm de contorno plantável.
+									<br><em>Faixa de valor:</em> R$150,00 - R$180,00</p>
+									<p>A <u>guirlanda média</u> é feita com o substrato aplicado em apenas uma parte de uma guirlanda de cipó. Possui por volta de 30cm de diâmetro.
+									<br><em>Faixa de valor:</em> R$90,00 - R$110,00</p>
+									<p>A <u>guirlanda pequena</u> é feita com substrato aplicado em apenas uma parte de uma guirlanda de cipó. Possui por volta de 20cm de diâmetro.
+									<br><em>Faixa de valor:</em> R$60,00 - R$80,00</p>
 									<h2>Duração do arranjo</h2>
 									<p>Por volta de <strong>3 meses.</strong></p>
 									<p>O arranjo continua vivo depois disso se você cuidar direitinho! Mas pode perder a forma, já que as plantas crescem, assim como pode ser necessário renovar o substrato ou adubar o arranjo depois de 3 meses.</p>
