Adiciona sobre reforma

--- a/reformas.html
+++ b/reformas.html
@@ -70,74 +70,58 @@
 				<div class="single-content">
 					<div class="container-fluid">
 						<div class="row">
-							<div class="col-md-7">
-								<div class="images-project">
-									<img src="upload/portfolio/g1.png" alt="">
-									<div class="row">
-										<div class="col-sm-6">
-											<img src="upload/portfolio/s2.jpg" alt="">
+							<div class="project-content">
+								<h2>Detalhes</h2>
+								<p>Sua guirlanda está fora de época? Tem um arranjo que cresceu demais? Ou que suculentas morreram? Tem várias suculentas em potinhos separados e quer colocar elas todas juntinhas?</p>
+								<p>A reforma de arranjos está aqui para esses e diversos outros casos! Montamos arranjos com suculentas que você já tem, em vasinhos para você colocar no lugar ideal da sua casa.</p>
+								<h2>Valores</h2>
+								<p>Como a reforma de arranjos é feita de acordo com a necessidade do cliente, recebemos seu pedido, fazemos uma proposta de modificações com um valor e aí sim fazemos a reforma, caso você concorde!</p>
+								<a class="btn-default btn-dark" href="contato.html">
+									<i class="fa fa-shopping-cart"></i>
+									Peça sua reforma
+								</a>
+								<h2>Avise para seus amigos!</h2>
+								<ul class="social-icons">
+									<li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+									<li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
+									<li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+								</ul>
+
+								<!-- Testimonial-section 
+									================================================== 
+								<section class="testimonial-section">
+									<div class="container">
+
+										<div class="title-section">
+											<h1>Testimonial</h1>
 										</div>
-										<div class="col-sm-6">
-											<img src="upload/portfolio/s3.jpg" alt="">
+
+										<div class="testimonial-box">
+											<ul class="bxslider">
+												<li>
+													<img src="upload/others/test1.jpg" alt="">
+													<p>“Ut wisi enim ad minim veniam, q uis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue.” </p>
+													<h2>Daria Cresswell</h2>
+													<span>PR Manager</span>
+												</li>
+												<li>
+													<img src="upload/others/test2.jpg" alt="">
+													<p>“Ut wisi enim ad minim veniam, q uis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue.” </p>
+													<h2>John Doe</h2>
+													<span>Web Developer</span>
+												</li>
+												<li>
+													<img src="upload/others/test3.jpg" alt="">
+													<p>“Ut wisi enim ad minim veniam, q uis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue.” </p>
+													<h2>Michael Smith</h2>
+													<span>UI, Designer</span>
+												</li>
+											</ul>
 										</div>
+
 									</div>
-									<img src="upload/portfolio/s4.jpg" alt="">
-								</div>
-							</div>
-							<div class="col-md-5">
-								<div class="project-content">
-									<h2>Detalhes</h2>
-									<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Donec odio. Quisque volutpat mattis eros. Nullam malesuada erat ut turpis. Suspendisse urna nibh, viverra non, semper suscipit, posuere a, pede.</p>
-									<p>Donec nec justo eget felis facilisis fermentum. Aliquam porttitor mauris sit amet orci. Aenean dignissim pellentesque felis.</p>
-									<h2>Como cuidar</h2>
-									<p>Brand & Co.</p>
-									<h2>Compartilhe com seus amigos!</h2>
-									<ul class="social-icons">
-										<li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-										<li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
-										<li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-									</ul>
-									<a class="btn-default btn-dark" href="contato.html">
-										<i class="fa fa-shopping-cart"></i>
-										Encomende a sua
-									</a>
-
-									<!-- Testimonial-section 
-				================================================== 
-			<section class="testimonial-section">
-				<div class="container">
-
-					<div class="title-section">
-						<h1>Testimonial</h1>
-					</div>
-
-					<div class="testimonial-box">
-						<ul class="bxslider">
-							<li>
-								<img src="upload/others/test1.jpg" alt="">
-								<p>“Ut wisi enim ad minim veniam, q uis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue.” </p>
-								<h2>Daria Cresswell</h2>
-								<span>PR Manager</span>
-							</li>
-							<li>
-								<img src="upload/others/test2.jpg" alt="">
-								<p>“Ut wisi enim ad minim veniam, q uis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue.” </p>
-								<h2>John Doe</h2>
-								<span>Web Developer</span>
-							</li>
-							<li>
-								<img src="upload/others/test3.jpg" alt="">
-								<p>“Ut wisi enim ad minim veniam, q uis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue.” </p>
-								<h2>Michael Smith</h2>
-								<span>UI, Designer</span>
-							</li>
-						</ul>
-					</div>
-
-				</div>
-			</section>
-			<!-- End Testimonial section -->
-								</div>
+								</section>
+								<!-- End Testimonial section -->
 							</div>
 						</div>
 					</div>
