Ajustes de imagens

--- a/index.html
+++ b/index.html
@@ -177,50 +177,50 @@
 		</div>
 		<!-- End content -->
 
-		<!-- fixed-sidebar-right -->
-		<div id="fixed-sidebar">
+<!-- fixed-sidebar-right -->
+<div id="fixed-sidebar">
 
-			<div class="about-widget side-widget">
-				<h2>O que fazemos</h2>
-				<p>Somos amantes de suculentas! E queremos encher sua casa com essas gordinhas também ♥</p>
-			</div>
-
-			<div class="instagram-widget side-widget">
-				<h2>Nossa galeria</h2>
-				<ul class="instagram-list">
-					<li><a href="#"><img src="upload/instagram/1.jpg" alt=""></a></li>
-					<li><a href="#"><img src="upload/instagram/2.jpg" alt=""></a></li>
-					<li><a href="#"><img src="upload/instagram/3.jpg" alt=""></a></li>
-					<li><a href="#"><img src="upload/instagram/4.jpg" alt=""></a></li>
-					<li><a href="#"><img src="upload/instagram/5.jpg" alt=""></a></li>
-					<li><a href="#"><img src="upload/instagram/6.jpg" alt=""></a></li>
-				</ul>
-			</div>
-
-			<div class="social-widget side-widget">
-				<h2>Entre em contato</h2>
-				<ul class="contact-info">
-					<li>
-						<i class="la la-phone"></i>
-						<p>
-							<a href="https://wpp.ana.rocks/">Whatsapp</a>
-						</p>
-					</li>
-					<li>
-						<i class="la la-envelope"></i>
-						<p>
-							<a href="mailto:suculentas@ana.rocks">suculentas@ana.rocks</a>
-						</p>
-					</li>
-				</ul>
-			</div>
-
-			<a class="close-fixed-sidebar" href="#"><i class="la la-close"></i></a>
-
-		</div>
-
+	<div class="about-widget side-widget">
+		<h2>O que fazemos</h2>
+		<p>Somos amantes de suculentas! E queremos encher sua casa com essas gordinhas também ♥ Por isso, fazemos arranjos lindos, que permitem que essas plantinhas possam ser enfeites especiais para sua casa.</p>
 	</div>
-	<!-- End Container -->
+
+	<!--div class="instagram-widget side-widget">
+		<h2>Nossa galeria</h2>
+		<ul class="instagram-list">
+			<li><a href="#"><img src="upload/instagram/1.jpg" alt=""></a></li>
+			<li><a href="#"><img src="upload/instagram/2.jpg" alt=""></a></li>
+			<li><a href="#"><img src="upload/instagram/3.jpg" alt=""></a></li>
+			<li><a href="#"><img src="upload/instagram/4.jpg" alt=""></a></li>
+			<li><a href="#"><img src="upload/instagram/5.jpg" alt=""></a></li>
+			<li><a href="#"><img src="upload/instagram/6.jpg" alt=""></a></li>
+		</ul>
+	</div-->
+
+	<div class="social-widget side-widget">
+		<h2>Entre em contato</h2>
+		<ul class="contact-info">
+			<li>
+				<i class="la la-phone"></i>
+				<p>
+					<a href="https://wpp.ana.rocks/">Whatsapp</a>
+				</p>
+			</li>
+			<li>
+				<i class="la la-envelope"></i>
+				<p>
+					<a href="mailto:suculentas@ana.rocks">suculentas@ana.rocks</a>
+				</p>
+			</li>
+		</ul>
+	</div>
+
+	<a class="close-fixed-sidebar" href="#"><i class="la la-close"></i></a>
+
+</div>
+
+</div>
+<!-- End Container -->
 
 	<script src="js/daxon-plugins.min.js"></script>
 	<script src="js/jquery.countTo.js"></script>
