--- a/contato.html
+++ b/contato.html
@@ -105,7 +105,7 @@
 							<div id="msg"></div>
 						</form>
 						<div class="image-holder">
-							<img src="upload/others/contact.jpg" alt="">
+							<img src="upload/portfolio/g1.png" alt="Foto da guirlanda de suculentas feita por nós.">
 						</div>
 					</div>
 				</div>
@@ -120,10 +120,10 @@
 
 	<div class="about-widget side-widget">
 		<h2>O que fazemos</h2>
-		<p>Somos amantes de suculentas! E queremos encher sua casa com essas gordinhas também ♥</p>
+		<p>Somos amantes de suculentas! E queremos encher sua casa com essas gordinhas também ♥ Por isso, fazemos arranjos lindos, que permitem que essas plantinhas possam ser enfeites especiais para sua casa.</p>
 	</div>
 
-	<div class="instagram-widget side-widget">
+	<!--div class="instagram-widget side-widget">
 		<h2>Nossa galeria</h2>
 		<ul class="instagram-list">
 			<li><a href="#"><img src="upload/instagram/1.jpg" alt=""></a></li>
@@ -133,7 +133,7 @@
 			<li><a href="#"><img src="upload/instagram/5.jpg" alt=""></a></li>
 			<li><a href="#"><img src="upload/instagram/6.jpg" alt=""></a></li>
 		</ul>
-	</div>
+	</div-->
 
 	<div class="social-widget side-widget">
 		<h2>Entre em contato</h2>
