--- a/contato.html
+++ b/contato.html
@@ -86,23 +86,24 @@
 			<section class="contact-form-section">
 				<div class="container-fluid">
 					<div class="contact-form-box">
-						<form id="contact-form">
+						<form id="contact-form" action="https://docs.google.com/forms/d/e/1FAIpQLScH1DhDeTkNbdHtLqXwmehgw-R2oW1cJ0uybeNX8f-k9IltVQ/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
 							<h2>Quer gordinhas pra chamar de suas?</h2>
 							<p>Vamos conversar sobre <span>seu</span> arranjo especial!</p>
 							<div class="row">
 								<div class="col-sm-6">
-									<input name="name" id="name" type="text" placeholder="Nome*">
+									<input name="name" id="entry.1549311374" type="text" placeholder="Nome*">
 								</div>
 								<div class="col-sm-6">
-									<input name="mail" id="mail" type="text" placeholder="E-mail*">
+									<input name="mail" id="entry.1542878617" type="text" placeholder="E-mail*">
 								</div>
 							</div>
-							<input name="subject" id="subject" type="text" placeholder="Assunto">	
-							<textarea name="comment" id="comment" placeholder="Mensagem*"></textarea>
+							<input name="subject" id="entry.1854315837" type="text" placeholder="Assunto">	
+							<textarea name="comment" id="entry.156090267" placeholder="Mensagem*"></textarea>
 							<button type="submit" id="submit_contact">
 								<i class="la la-paper-plane"></i>Enviar
 							</button>
 							<div id="msg"></div>
+							<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
 						</form>
 						<div class="image-holder">
 							<img src="upload/portfolio/g1.png" alt="Foto da guirlanda de suculentas feita por nós.">
@@ -165,6 +166,11 @@
     <script src="http://maps.google.com/maps/api/js?key=AIzaSyCiqrIen8rWQrvJsu-7f4rOta0fmI5r2SI&amp;sensor=false&amp;language=en"></script>
 	<script src="js/gmap3.min.js"></script>
 	<script src="js/script.js"></script>
+	<script>
+		document.getElementById("contact-form").onsubmit({
+			document.getElementById("msg").innerHTML = 'Sua mensagem foi enviada! Entraremos em contato em breve. Agradecemos seu interesse!'
+		})
+	</script>
 
 </body>
 </html>
