Fixes contact form

--- a/contato.html
+++ b/contato.html
@@ -86,7 +86,7 @@
 			<section class="contact-form-section">
 				<div class="container-fluid">
 					<div class="contact-form-box">
-						<form id="contact-form" action="https://docs.google.com/forms/d/e/1FAIpQLScH1DhDeTkNbdHtLqXwmehgw-R2oW1cJ0uybeNX8f-k9IltVQ/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
+						<form id="contact-form" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLScH1DhDeTkNbdHtLqXwmehgw-R2oW1cJ0uybeNX8f-k9IltVQ/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
 							<h2>Quer gordinhas pra chamar de suas?</h2>
 							<p>Vamos conversar sobre <span>seu</span> arranjo especial!</p>
 							<div class="row">
