Fixes contact form

--- a/contato.html
+++ b/contato.html
@@ -91,14 +91,14 @@
 							<p>Vamos conversar sobre <span>seu</span> arranjo especial!</p>
 							<div class="row">
 								<div class="col-sm-6">
-									<input name="name" id="entry.1549311374" type="text" placeholder="Nome*">
+									<input name="entry.1549311374" id="entry.1549311374" type="text" placeholder="Nome*">
 								</div>
 								<div class="col-sm-6">
-									<input name="mail" id="entry.1542878617" type="text" placeholder="E-mail*">
+									<input name="entry.1542878617" id="entry.1542878617" type="text" placeholder="E-mail*">
 								</div>
 							</div>
-							<input name="subject" id="entry.1854315837" type="text" placeholder="Assunto">	
-							<textarea name="comment" id="entry.156090267" placeholder="Mensagem*"></textarea>
+							<input name="entry.1854315837" id="entry.1854315837" type="text" placeholder="Assunto">	
+							<textarea name="entry.156090267" id="entry.156090267" placeholder="Mensagem*"></textarea>
 							<button type="submit" id="submit_contact">
 								<i class="la la-paper-plane"></i>Enviar
 							</button>
