Fixes contact form

--- a/contato.html
+++ b/contato.html
@@ -167,6 +167,7 @@
 	<script src="js/gmap3.min.js"></script>
 	<script src="js/script.js"></script>
 	<script>
+		let submitted=false;
 		document.getElementById("contact-form").onsubmit({
 			document.getElementById("msg").innerHTML = 'Sua mensagem foi enviada! Entraremos em contato em breve. Agradecemos seu interesse!'
 		})
