Adds new wreath pic

--- a/guirlandas.html
+++ b/guirlandas.html
@@ -72,10 +72,10 @@
 						<div class="row">
 							<div class="col-md-7">
 								<div class="images-project">
-									<img src="upload/portfolio/g1.png" alt="">
+									<img src="upload/portfolio/g1.png" alt="Guirlanda padrão">
 									<div class="row">
 										<div class="col-sm-6">
-											<img src="upload/portfolio/s2.jpg" alt="">
+											<img src="upload/portfolio/g2.png" alt="Guirlanda pequena">
 										</div>
 										<div class="col-sm-6">
 											<img src="upload/portfolio/s3.jpg" alt="">
