Fixes new wreath image

--- a/guirlandas.html
+++ b/guirlandas.html
@@ -75,7 +75,7 @@
 									<img src="upload/portfolio/g1.png" alt="Guirlanda padrão">
 									<div class="row">
 										<div class="col-sm-6">
-											<img src="upload/portfolio/g2.png" alt="Guirlanda pequena">
+											<img src="upload/portfolio/g2.jpg" alt="Guirlanda pequena">
 										</div>
 										<div class="col-sm-6">
 											<img src="upload/portfolio/s3.jpg" alt="">
