Fixes image size

--- a/guirlandas.html
+++ b/guirlandas.html
@@ -75,13 +75,13 @@
 									<img src="upload/portfolio/g1.png" alt="Guirlanda padrão">
 									<div class="row">
 										<div class="col-sm-6">
-											<img src="upload/portfolio/g2.jpg" alt="Guirlanda pequena">
+											<img src="upload/portfolio/s2.jpg" alt="Guirlanda pequena">
 										</div>
 										<div class="col-sm-6">
 											<img src="upload/portfolio/s3.jpg" alt="">
 										</div>
 									</div>
-									<img src="upload/portfolio/s4.jpg" alt="">
+									<img src="upload/portfolio/g2.jpg" alt="">
 								</div>
 							</div>
 							<div class="col-md-5">
