Ajeitando reformas com exemplos

--- a/reformas.html
+++ b/reformas.html
@@ -70,58 +70,72 @@
 				<div class="single-content">
 					<div class="container-fluid">
 						<div class="row">
-							<div class="project-content">
-								<h2>Detalhes</h2>
-								<p>Sua guirlanda está fora de época? Tem um arranjo que cresceu demais? Ou que suculentas morreram? Tem várias suculentas em potinhos separados e quer colocar elas todas juntinhas?</p>
-								<p>A reforma de arranjos está aqui para esses e diversos outros casos! Montamos arranjos com suculentas que você já tem, em vasinhos para você colocar no lugar ideal da sua casa.</p>
-								<h2>Valores</h2>
-								<p>Como a reforma de arranjos é feita de acordo com a necessidade do cliente, recebemos seu pedido, fazemos uma proposta de modificações com um valor e aí sim fazemos a reforma, caso você concorde!</p>
-								<a class="btn-default btn-dark" href="contato.html">
-									<i class="fa fa-shopping-cart"></i>
-									Peça sua reforma
-								</a>
-								<h2>Avise para seus amigos!</h2>
-								<ul class="social-icons">
-									<li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-									<li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
-									<li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-								</ul>
+							<div class="col-md-5">
+								<div class="images-project">
+									<figure>
+										<img src="upload/portfolio/r1.jpg" alt="Foto do cliente de arranjo reformado">
+										<figcaption>Foto de cliente, de arranjo reformado. O vaso foi limpo e o lodo removido, além de adicionar novas plantas na composição.</figcaption>
+									</figure>
+									<figure>
+										<img src="upload/portfolio/r2.jpg" alt="Foto do cliente de arranjo reformado">
+										<figcaption>Foto de cliente, de arranjo reformado. O vaso e as plantas eram da cliente, e foram apenas compostas no arranjo juntas para serem exibidas.</figcaption>
+									</figure>
+								</div>
+							</div>
+							<div class="col-md-7">
+								<div class="project-content">
+									<h2>Detalhes</h2>
+									<p>Sua guirlanda está fora de época? Tem um arranjo que cresceu demais? Ou que suculentas morreram? Tem várias suculentas em potinhos separados e quer colocar elas todas juntinhas?</p>
+									<p>A reforma de arranjos está aqui para esses e diversos outros casos! Montamos arranjos com suculentas que você já tem, em vasinhos para você colocar no lugar ideal da sua casa. Adicionamos plantinhas novas para substituir as que já se foram, ou pra complementar o arranjo. Damos manutenção nos vasos que precisam, e substituímos os que já não aguentam mais. Só conta pra gente, o que você precisa?</p>
+									<h2>Valores</h2>
+									<p>Como a reforma de arranjos é feita de acordo com a necessidade do cliente, recebemos seu pedido, fazemos uma proposta de modificações com um valor e aí sim fazemos a reforma, caso você concorde!</p>
+									<p><a class="btn-default btn-dark" href="contato.html">
+										<i class="fa fa-shopping-cart"></i>
+										Peça seu orçamento
+									</a></p>
+									<h2>Avise para seus amigos!</h2>
+									<ul class="social-icons">
+										<li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
+										<li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
+										<li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
+									</ul>
 
-								<!-- Testimonial-section 
-									================================================== 
-								<section class="testimonial-section">
-									<div class="container">
+									<!-- Testimonial-section 
+										================================================== 
+									<section class="testimonial-section">
+										<div class="container">
 
-										<div class="title-section">
-											<h1>Testimonial</h1>
+											<div class="title-section">
+												<h1>Testimonial</h1>
+											</div>
+
+											<div class="testimonial-box">
+												<ul class="bxslider">
+													<li>
+														<img src="upload/others/test1.jpg" alt="">
+														<p>“Ut wisi enim ad minim veniam, q uis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue.” </p>
+														<h2>Daria Cresswell</h2>
+														<span>PR Manager</span>
+													</li>
+													<li>
+														<img src="upload/others/test2.jpg" alt="">
+														<p>“Ut wisi enim ad minim veniam, q uis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue.” </p>
+														<h2>John Doe</h2>
+														<span>Web Developer</span>
+													</li>
+													<li>
+														<img src="upload/others/test3.jpg" alt="">
+														<p>“Ut wisi enim ad minim veniam, q uis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue.” </p>
+														<h2>Michael Smith</h2>
+														<span>UI, Designer</span>
+													</li>
+												</ul>
+											</div>
+
 										</div>
-
-										<div class="testimonial-box">
-											<ul class="bxslider">
-												<li>
-													<img src="upload/others/test1.jpg" alt="">
-													<p>“Ut wisi enim ad minim veniam, q uis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue.” </p>
-													<h2>Daria Cresswell</h2>
-													<span>PR Manager</span>
-												</li>
-												<li>
-													<img src="upload/others/test2.jpg" alt="">
-													<p>“Ut wisi enim ad minim veniam, q uis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue.” </p>
-													<h2>John Doe</h2>
-													<span>Web Developer</span>
-												</li>
-												<li>
-													<img src="upload/others/test3.jpg" alt="">
-													<p>“Ut wisi enim ad minim veniam, q uis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue.” </p>
-													<h2>Michael Smith</h2>
-													<span>UI, Designer</span>
-												</li>
-											</ul>
-										</div>
-
-									</div>
-								</section>
-								<!-- End Testimonial section -->
+									</section>
+									<!-- End Testimonial section -->
+								</div>
 							</div>
 						</div>
 					</div>
