Atualização página de contato

--- a/contato.html
+++ b/contato.html
@@ -72,6 +72,7 @@
 					<div class="row">
 						<div class="col-sm-4">
 							<div class="contact-post">
+								<h3><a href="https://instagram.com/suculentanne">Instagram</a></h3> <br>
 								<h3><a href="https://wpp.ana.rocks/">Whatsapp</a></h3> <br>
 								<h3><a href="mailto:suculentas@ana.rocks">suculentas@ana.rocks</a></h3>
 							</div>
@@ -106,7 +107,7 @@
 							<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
 						</form>
 						<div class="image-holder">
-							<img src="upload/portfolio/g1.png" alt="Foto da guirlanda de suculentas feita por nós.">
+							<img src="upload/others/contato.jpg" alt="Foto de um arranjo de suculentas feito por nós.">
 						</div>
 					</div>
 				</div>
