--- a/index.html
+++ b/index.html
@@ -185,17 +185,17 @@
 		<p>Somos amantes de suculentas! E queremos encher sua casa com essas gordinhas também ♥ Por isso, fazemos arranjos lindos, que permitem que essas plantinhas possam ser enfeites especiais para sua casa.</p>
 	</div>
 
-	<!--div class="instagram-widget side-widget">
-		<h2>Nossa galeria</h2>
+	<div class="instagram-widget side-widget">
+		<h2>Nosso instagram</h2>
 		<ul class="instagram-list">
-			<li><a href="#"><img src="upload/instagram/1.jpg" alt=""></a></li>
-			<li><a href="#"><img src="upload/instagram/2.jpg" alt=""></a></li>
-			<li><a href="#"><img src="upload/instagram/3.jpg" alt=""></a></li>
-			<li><a href="#"><img src="upload/instagram/4.jpg" alt=""></a></li>
-			<li><a href="#"><img src="upload/instagram/5.jpg" alt=""></a></li>
-			<li><a href="#"><img src="upload/instagram/6.jpg" alt=""></a></li>
+			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/1.jpg" alt=""></a></li>
+			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/2.jpg" alt=""></a></li>
+			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/3.jpg" alt=""></a></li>
+			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/4.jpg" alt=""></a></li>
+			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/5.jpg" alt=""></a></li>
+			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/6.jpg" alt=""></a></li>
 		</ul>
-	</div-->
+	</div>
 
 	<div class="social-widget side-widget">
 		<h2>Entre em contato</h2>
