Conserta extensoes imgs do insta

--- a/contato.html
+++ b/contato.html
@@ -128,12 +128,12 @@
 	<div class="instagram-widget side-widget">
 		<h2>Nosso instagram</h2>
 		<ul class="instagram-list">
-			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/1.jpg" alt=""></a></li>
-			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/2.jpg" alt=""></a></li>
-			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/3.jpg" alt=""></a></li>
-			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/4.jpg" alt=""></a></li>
-			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/5.jpg" alt=""></a></li>
-			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/6.jpg" alt=""></a></li>
+			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/1.png" alt=""></a></li>
+			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/2.png" alt=""></a></li>
+			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/3.png" alt=""></a></li>
+			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/4.png" alt=""></a></li>
+			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/5.png" alt=""></a></li>
+			<li><a href="https://www.instagram.com/suculentanne/"><img src="upload/instagram/6.png" alt=""></a></li>
 		</ul>
 	</div>
 
