Adiciona novo slide

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
 				<div id="rev_slider_46_1_wrapper" class="rev_slider_wrapper fullscreen-container" data-alias="notgeneric1" style="background-color:transparent;padding:0px;">
 					<!-- START REVOLUTION SLIDER 5.0.7 fullscreen mode -->
 					<div id="rev_slider_46_1" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.0.7">
-						<ul>	
+						<ul>
 							<!-- SLIDE  -->
 							<li data-index="rs-149" data-transition="fadetotopfadefrombottom" data-slotamount="default"  data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-rotate="0"  data-saveperformance="off"  data-title="Chill" data-description="">
 								<!-- MAIN IMAGE -->
-								<img src="upload/slides/guirlanda.png"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+								<img src="upload/slides/arranjos.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
 								<!-- LAYERS -->
 
 								<!-- LAYER NR. 1 -->
@@ -114,7 +114,111 @@
 									data-splitout="none" 
 									data-responsive_offset="on"
 									data-elementdelay="0.05" 
-									style="z-index: 5; white-space: nowrap;">Arranjos <br> Especiais.
+									style="z-index: 5; white-space: nowrap;">Arranjos de<br>Suculentas.
+								</div>
+
+								<!-- LAYER NR. 3 -->
+								<div class="tp-caption NotGeneric-SubTitle   tp-resizeme rs-parallaxlevel-2" 
+									id="slide-149-layer-3" 
+									data-x="['left','left','left','left']"
+									data-y="['center','center','center','center']"
+									data-hoffset="['800','400','160','40']" 
+									data-voffset="['45','25','10','0']" 
+									data-fontsize="['20','18','17','14']"
+									data-lineheight="['28','26','26','22']"
+									data-width="none"
+									data-height="none"
+									data-whitespace="nowrap"
+									data-transform_idle="o:1;"
+									data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" 
+									data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" 
+									data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" 
+									data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
+									data-start="1300" 
+									data-splitin="none" 
+									data-splitout="none" 
+									data-responsive_offset="on" 
+									style="z-index: 6; white-space: nowrap;">Decorações vivas, para<br>amar e presentear.
+								</div>
+
+								<!-- LAYER NR. 4 -->
+								<div class="tp-caption NotGeneric-SubTitle   tp-resizeme rs-parallaxlevel-2" 
+									id="slide-149-layer-4" 
+									data-x="['left','left','left','left']"
+									data-y="['center','center','center','center']"
+									data-hoffset="['800','400','160','40']"  
+									data-voffset="['145','140','120','100']" 
+									data-fontsize="['18','17','17','15']"
+									data-lineheight="['28','26','26','22']"
+									data-width="none"
+									data-height="none"
+									data-whitespace="nowrap"
+									data-transform_idle="o:1;"
+									data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" 
+									data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" 
+									data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" 
+									data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
+									data-start="1600" 
+									data-splitin="none" 
+									data-splitout="none" 
+									data-responsive_offset="on" 
+									style="z-index: 6; white-space: nowrap;"><a href="arranjos.html" class="btn-default">Arranjos de Suculentas</a>
+								</div>
+							</li>
+
+							<!-- SLIDE  -->
+							<li data-index="rs-150" data-transition="fadetotopfadefrombottom" data-slotamount="default"  data-easein="Power3.easeInOut" data-easeout="Power3.easeInOut" data-masterspeed="1500" data-rotate="0"  data-saveperformance="off"  data-title="Chill" data-description="">
+								<!-- MAIN IMAGE -->
+								<img src="upload/slides/guirlanda.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
+								<!-- LAYERS -->
+
+								<!-- LAYER NR. 1 -->
+								<div class="tp-caption NotGeneric-SubTitle   tp-resizeme rs-parallaxlevel-2" 
+									id="slide-149-layer-1" 
+									data-x="['left','left','left','left']"
+									data-y="['center','center','center','center']"
+									data-hoffset="['700','300','20','20']"  
+									data-voffset="['0','0','0','0']" 
+									data-fontsize="['18','17','17','15']"
+									data-lineheight="['28','26','26','22']"
+									data-width="none"
+									data-height="none"
+									data-whitespace="nowrap"
+									data-transform_idle="o:1;"
+									data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:0;s:2000;e:Power4.easeInOut;" 
+									data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" 
+									data-mask_in="x:0px;y:[100%];s:inherit;e:inherit;" 
+									data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
+									data-start="1600" 
+									data-splitin="none" 
+									data-splitout="none" 
+									data-responsive_offset="on" 
+									style="z-index: 6; white-space: nowrap;"><div class="border-line"></div>
+								</div>
+
+								<!-- LAYER NR. 2 -->
+								<div class="tp-caption NotGeneric-Title   tp-resizeme rs-parallaxlevel-3" 
+									id="slide-149-layer-2" 
+									data-x="['left','left','center','center']"
+									data-y="['center','center','center','center']"
+									data-hoffset="['800','400','0','0']" 
+									data-voffset="['-100','-90','0','0']"  
+									data-fontsize="['80','70','40','30']"
+									data-lineheight="['86','76','40','36']"
+									data-width="none"
+									data-height="none"
+									data-whitespace="nowrap"
+									data-transform_idle="o:1;"
+									data-transform_in="y:[100%];z:0;rZ:-35deg;sX:1;sY:1;skX:0;skY:0;s:2000;e:Power4.easeInOut;" 
+									data-transform_out="y:[100%];s:1000;e:Power2.easeInOut;s:1000;e:Power2.easeInOut;" 
+									data-mask_in="x:0px;y:0px;s:inherit;e:inherit;" 
+									data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;" 
+									data-start="1000" 
+									data-splitin="none" 
+									data-splitout="none" 
+									data-responsive_offset="on"
+									data-elementdelay="0.05" 
+									style="z-index: 5; white-space: nowrap;">Arranjos <br> Temáticos.
 								</div>
 
 								<!-- LAYER NR. 3 -->
@@ -164,7 +268,6 @@
 									data-responsive_offset="on" 
 									style="z-index: 6; white-space: nowrap;"><a href="guirlandas.html" class="btn-default">Guirlandas vivas</a>
 								</div>
-
 							</li>
 						</ul>
 						<div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>	
